--- a/cblmoney-api/pom.xml
+++ b/cblmoney-api/pom.xml
@@ -104,6 +104,13 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>5.0.12.Final</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
